katars/tests/snaps/snapshots/snap_errors__func_wrong_arity.snap
---
source: katars/tests/snaps/errors.rs
expression: "helpers::run_error(\"func f(a: Int, b: Int) { ret a + b }\\nf(1)\")"
---
Error: function expects 2 argument(s), got 1
   ╭─[<test>:2:2]
   │
 2 │ f(1)
   │  ─┬─  
   │   ╰─── function expects 2 argument(s), got 1
───╯
